--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
 ---
+<h3><strong> {{ page.title }} </strong></h3>
 {{ content }}
 <a href="{{ site.baseurl }}/index.html">Go back</a>
